Blog and User errors handled with application.properties updated for Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/usersdrivingschool
+spring.datasource.username=yash
+spring.datasource.password=a1B2c3...
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
